@@ -20,6 +20,7 @@ Version.FUTURE [ DEVELOPMENTAL TO-DO ]
 		... could later go over http ...
 ...
 Version 2.09b3 - 2020/04 - New features & fixes ...
+	- NEW: xacls -s1 shows OneFS chmod output
 	- FIX: +tally horribly broken in 2.09b2
 	- NEW: +tally now has [tally] section in pfile for custom reports
 Version 2.09b2 - 2020/04 - New features & fixes ...
